# rust-rest-api-server

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  makefile
.github/workflows/: actions.yaml
api/: user.http
migrations/: 20240731190232_user.sql
public/openapi-spec/: service-openapi.yaml
src/: di_container.rs  main.rs  route.rs
src/app/: mod.rs
src/app/dto/user/: create_user_dto.rs  mod.rs  user_dto.rs
src/app/error/: mod.rs  service_error.rs
src/app/service/user/: mod.rs
src/app/use_case/: bus.rs  mod.rs
src/app/use_case/command/create_user/: create_user_command.rs  mod.rs
src/app/use_case/query/: mod.rs
src/app/use_case/query/user_by_id/: mod.rs
src/domain/user/entity/: mod.rs
src/domain/user/repository/: mod.rs
src/domain/user/service/: mod.rs
src/repository/postgres/user/: user_repository.rs
src/ui/http/: healthcheck.rs  mod.rs
src/ui/http/user/: create_user.rs  get_user.rs  mod.rs
