[package]
name = "rust-rest-api-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["external"]

[dependencies]
sqlx = { version = "0.8.2", features = ["runtime-async-std", "macros", "postgres", "uuid", "chrono"] }
axum = "0.8.0-rc.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
uuid = { version = "1.3.0", features = ["v7","serde"] }
dotenv = "0.15.0"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
shaku = "0.6"
thiserror = "2.0"
async-trait = "0.1"
openapi = { path = "external"}
